# rust-gmagick

./: .gitignore  Cargo.toml  README.md  build.rs
src/: ffi.rs  gen.h  lib.rs  main.rs
