[package]
name = "gmagick"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"

[build-dependencies]
bindgen = "0.51.1"
pkg-config = "0.3.16"

[dev-dependencies]
jp2k = { path = "../jp2k" }
